Use the simple computeIfAbsent method.